--- a/app/src/main/res/layout/activity_admin_screen.xml
+++ b/app/src/main/res/layout/activity_admin_screen.xml
@@ -7,7 +7,7 @@
     tools:context=".AdminScreen">
 
     <TableLayout
-        android:id="@+id/tableLayout"
+        android:id="@+id/listOfVehicles"
         android:layout_width="351dp"
         android:layout_height="391dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,7 +42,7 @@
         android:text="Pojazdy z ważnym biletem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout"
+        app:layout_constraintTop_toBottomOf="@+id/listOfVehicles"
         app:layout_constraintVertical_bias="0.29" />
 
     <Button
@@ -54,16 +54,15 @@
         android:layout_marginTop="36dp"
         android:text="Pojazdy z nieważnym biletem"
         app:layout_constraintStart_toEndOf="@+id/validVehicle"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/listOfVehicles" />
 
     <TextView
         android:id="@+id/titleOfTable"
         android:layout_width="306dp"
         android:layout_height="33dp"
-        android:text="null"
         android:textColor="#000000"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
+        app:layout_constraintBottom_toTopOf="@+id/listOfVehicles"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
