--- a/app/src/main/res/layout-v21/activity_main.xml
+++ b/app/src/main/res/layout-v21/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FDFDFD"
+    android:background="@color/colorPrimary"
     tools:context=".MainScreen">
     <!-- android:background = "@drawable/auta" -->
 
@@ -12,8 +12,10 @@
         android:id="@+id/payButton"
         android:layout_width="145dp"
         android:layout_height="50dp"
-        android:background="#3477EB"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Zapłać"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,9 +29,9 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-condensed-medium"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Na jak długo chcesz zostawić samochód?"
-        android:textColor="#3477EB"
+        android:textColor="@color/sjenapalona"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -42,7 +44,12 @@
         android:layout_width="272dp"
         android:layout_height="58dp"
         android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ 1234567890"
+        android:fontFamily="sans-serif-smallcaps"
         android:hint="Numer rejestracyjny pojazdu"
+        android:textColor="@color/colorRose"
+        android:textColorHighlight="@color/colorRose"
+        android:textColorHint="@color/colorRose"
+        android:textColorLink="@color/colorRose"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.438"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -55,8 +62,9 @@
         android:id="@+id/textView"
         android:layout_width="81dp"
         android:layout_height="27dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Opłata: "
-        android:textColor="#3477EB"
+        android:textColor="@color/colorRose"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.072"
@@ -68,13 +76,14 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="108dp"
+        android:layout_width="86dp"
         android:layout_height="28dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Czas do: "
-        android:textColor="#3477EB"
+        android:textColor="@color/colorRose"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.673"
+        app:layout_constraintHorizontal_bias="0.711"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -86,7 +95,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:editable="false"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="0"
+        android:textColor="@color/sjenapalona"
+        android:textColorHighlight="@color/colorRose"
+        android:textColorHint="@color/colorRose"
+        android:textColorLink="@color/sjenapalona"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.317"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -100,7 +114,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:editable="false"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="00:00"
+        android:textColor="@color/sjenapalona"
+        android:textColorHighlight="@color/colorRose"
+        android:textColorHint="@color/colorRose"
+        android:textColorLink="@color/sjenapalona"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.888"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -113,9 +132,11 @@
         android:id="@+id/button"
         android:layout_width="145dp"
         android:layout_height="50dp"
-        android:background="#3477EB"
+        android:background="@color/colorRose"
         android:enabled="false"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Drukuj bilet"
+        android:textColor="@color/colorAccent"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -129,7 +150,6 @@
         android:id="@+id/timePicker1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
         android:timePickerMode="spinner"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -137,28 +157,33 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.543"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:theme="@style/MyTimePickerWidgetStyle"
+        style="@style/MyTimePickerWidgetStyle"/>
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="31dp"
         android:layout_height="26dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="PLN"
-        android:textColor="#3477EB"
+        android:textColor="@color/colorRose"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/timePicker1"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.413"
+        app:layout_constraintHorizontal_bias="0.386"
         app:layout_constraintStart_toEndOf="@+id/autoCompleteTextView2"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.479" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.292" />
 
     <Button
         android:id="@+id/cancel"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:background="#053DE8"
+        android:background="@color/sjenapalona"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Anuluj"
+        android:textColor="@color/colorAccent"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
