--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,64 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainScreen">
+    tools:context=".MainScreen"
+    android:background="@color/colorPrimary">
 
     <Button
         android:id="@+id/loginButton"
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Zaloguj"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/passwordBlank"
-        app:layout_constraintVertical_bias="0.15" />
+        app:layout_constraintVertical_bias="0.166" />
 
     <Button
         android:id="@+id/continueButton"
         android:layout_width="300dp"
         android:layout_height="50dp"
+        android:background="@color/sjenapalona"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Kontynuuj jako użytkownik"
+        android:textColor="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        app:layout_constraintVertical_bias="0.086" />
+        app:layout_constraintVertical_bias="0.41" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Login:"
-        android:textColor="#000000"
+        android:textColor="#e43f5a"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/loginBlank"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.154"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.935" />
+        app:layout_constraintVertical_bias="0.955" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Logowanie administratora"
-        android:textColor="#000000"
+        android:textColor="#e43f5a"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/loginBlank"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.588" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Hasło:"
-        android:textColor="#000000"
+        android:textColor="#e43f5a"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/passwordBlank"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,9 +85,12 @@
         android:id="@+id/passwordBlank"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="56dp"
         android:ems="10"
         android:inputType="textPassword"
+        android:textColor="#e43f5a"
+        android:textColorHighlight="@color/colorRose"
+        android:textColorLink="@color/colorRose"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
@@ -86,11 +100,29 @@
         android:id="@+id/loginBlank"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="284dp"
         android:ems="10"
         android:inputType="textPersonName"
+        android:textColor="#e43f5a"
+        android:textColorHighlight="@color/colorRose"
+        android:textColorHint="@color/colorRose"
+        android:textColorLink="@color/colorRose"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.504"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="256dp"
+        android:layout_height="122dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.026"
+        app:srcCompat="@drawable/car"
+        tools:ignore="MissingConstraints" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
