--- a/app/src/main/res/layout/activity_monety.xml
+++ b/app/src/main/res/layout/activity_monety.xml
@@ -4,15 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".Cash">
 
     <Button
-
-
         android:id="@+id/dziesiecgr"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="10 Groszy"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dwadziesciagr"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +26,11 @@
         android:id="@+id/dwadziesciagr"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="20 Groszy"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -35,7 +42,11 @@
         android:id="@+id/piedzesiatgr"
         android:layout_width="100dp"
         android:layout_height="50dp"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="50 Groszy"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/dwadziesciagr"
@@ -47,7 +58,11 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="5 Złotych"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -59,7 +74,11 @@
         android:id="@+id/dziesiecpln"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="10 Złotych"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dwadziesciapln"
         app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +89,11 @@
         android:id="@+id/dwadziesciapln"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="20 Złotych"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -82,7 +105,11 @@
         android:id="@+id/piedziesiatpln"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="50 Złotych"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -95,7 +122,11 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="1 Złoty"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/dwapln"
         app:layout_constraintStart_toStartOf="parent"
@@ -107,7 +138,11 @@
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:layout_marginTop="28dp"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="2 Złote"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
@@ -119,8 +154,10 @@
         android:id="@+id/textView4"
         android:layout_width="190dp"
         android:layout_height="30dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Pozostało do zapłaty:"
-        android:textColor="#3477EB"
+        android:textColor="@color/colorRose"
+        android:textColorLink="@color/colorRose"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/dziesiecgr"
         app:layout_constraintEnd_toStartOf="@+id/kosztPostoju"
@@ -132,7 +169,11 @@
         android:id="@+id/change"
         android:layout_width="177dp"
         android:layout_height="65dp"
+        android:background="@color/colorRose"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Zwrot pieniedzy"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -145,7 +186,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:editable="false"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="0.0"
+        android:textColor="@color/sjenapalona"
+        android:textColorLink="@color/sjenapalona"
         app:layout_constraintBottom_toTopOf="@+id/piedzesiatgr"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.784"
@@ -157,8 +201,10 @@
         android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="PLN"
-        android:textColor="#3477EB"
+        android:textColor="@color/colorRose"
+        android:textColorLink="@color/colorRose"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +217,11 @@
         android:id="@+id/cancel"
         android:layout_width="176dp"
         android:layout_height="42dp"
+        android:background="@color/sjenapalona"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Anuluj"
+        android:textColor="@color/colorAccent"
+        android:textColorLink="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -183,8 +233,10 @@
         android:id="@+id/textView11"
         android:layout_width="342dp"
         android:layout_height="33dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="Opłata biletu parkingowego ważnego do:"
-        android:textColor="#3477EB"
+        android:textColor="@color/colorRose"
+        android:textColorLink="@color/colorRose"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -198,7 +250,8 @@
         android:layout_width="108dp"
         android:layout_height="27dp"
         android:text="XX.XX.XXXX"
-        android:textColor="#000000"
+        android:textColor="@color/sjenapalona"
+        android:textColorLink="@color/sjenapalona"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -211,8 +264,10 @@
         android:id="@+id/Czas"
         android:layout_width="50dp"
         android:layout_height="26dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text="XX:XX"
-        android:textColor="#000000"
+        android:textColor="@color/sjenapalona"
+        android:textColorLink="@color/sjenapalona"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
